# WindP

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/shaders/: shader.wgsl
src/: main.rs  state.rs
src/gpu/: mod.rs  texture.rs
src/pdf/: mod.rs  render.rs
src/ui/: assets.rs  mod.rs
wix/: main.wxs
